# OCI

1lab/: OS Report Template.docx
2lab/: CMakeLists.txt  OS Report Template.docx
2lab/src/: 2lab.cpp  a.out  child1  child1.cpp  child2  child2.cpp  file1.txt  file2.txt  pipe1.txt  pipe2.txt
3lab/: CMakeLists.txt  OS Report Template.docx
3lab/src/: 3lab.cpp  a.out  input1.txt  input3.txt  strace
4lab/: CMakeLists.txt  OS Report Template.docx
4lab/src/: 4lab.cpp  a.out  child1  child1.cpp  child2  child2.cpp  file2.txt  pipe2.txt
5lab/: CMakeLists.txt  OS Report Template.docx
5lab/include/: math1.h  math2.h
5lab/src1/: main1.cpp
5lab/src2/: lib1.cpp  lib2.cpp  main2.cpp
6-8lab/: Makefile  OS Report Template.docx  client  server
6-8lab/src/: client.cpp
KP/: Makefile  OS Report Template.docx  client  game  server
KP/src/: client.cpp  game.cpp  myZmq.h  server.cpp  topology.h
